--- a/EsercitazioneWeek7.MVC/EsercitazioneWeek7.MVC.csproj
+++ b/EsercitazioneWeek7.MVC/EsercitazioneWeek7.MVC.csproj
@@ -7,7 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EsercitazioneWeek7.CORE\EsercitazioneWeek7.CORE.csproj" />
+    <ProjectReference Include="..\EsercitazioneWeek7.EF\EsercitazioneWeek7.EF.csproj" />
   </ItemGroup>
 
 </Project>
